--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "blogpostic-web-app",
+  "name": "BlogPostic-Web-App",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -13,7 +13,8 @@
     "vue": "^3.2.13",
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.1.6",
-    "vuex": "^4.0.2"
+    "vuex": "^4.0.2",
+    "blogpostic-api-wrapper": "git+https://github.com/s4timuen/BlogPostic-API-Wrapper.git"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
